--- a/ProjectOpenGL/ProjectOpenGL/ProjectOpenGL.vcxproj
+++ b/ProjectOpenGL/ProjectOpenGL/ProjectOpenGL.vcxproj
@@ -113,7 +113,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\glad\src\glad.c" />
+    <ClCompile Include="glad.c" />
     <ClCompile Include="testWindow.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
