--- a/ProjectOpenGL/ProjectOpenGL/ProjectOpenGL.vcxproj.filters
+++ b/ProjectOpenGL/ProjectOpenGL/ProjectOpenGL.vcxproj.filters
@@ -18,10 +18,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\glad\src\glad.c">
+    <ClCompile Include="testWindow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="testWindow.cpp">
+    <ClCompile Include="glad.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
